# SudBread

./: .gitignore  CMakeLists.txt  README.md
src/: Board.cpp  Board.h  CSquare.h  Square.h  fileop.cpp  fileop.h  gridop.cpp  gridop.h  main.cpp  main.h  solver.cpp  solver.h  stringop.cpp  stringop.h  test_main.cpp  timer.cpp  timer.h  timetrial.cpp  timetrial.h
